Formatting and minor code changes