@@ -136,14 +136,14 @@ public class DockerUtils {
             // This won't break anything if there are no GPUs at all and the config is tuned on; not recommended to enable this on non GPU machines
             // No discovery of GPUs, managing/rationing of GPU devices
             // So this needs to be used in conjunction with tagging to ensure that only applications which require GPU end up on executors with GPU enabled
-            if(resourceConfig.isEnableNvidiaGpu()){
+            if (resourceConfig.isEnableNvidiaGpu()) {
                 // This strange request is equivalent to 'docker create --gpus all'
                 final DeviceRequest nvidiaGpuDeviceRequest = new DeviceRequest()
                         .withDriver("nvidia")
                         .withCount(-1)
-                        .withCapabilities(ImmutableList.of(ImmutableList.of("gpu")))
+                        .withCapabilities(List.of(List.of("gpu")))
                         .withDeviceIds(Collections.emptyList());
-                hostConfig.withDeviceRequests(ImmutableList.of(nvidiaGpuDeviceRequest));
+                hostConfig.withDeviceRequests(List.of(nvidiaGpuDeviceRequest));
             }
 
             deploymentUnitSpec.getResources()
